--- a/Ejemplo/views/main.html
+++ b/Ejemplo/views/main.html
@@ -1,12 +1,11 @@
  <header>
     <h1>Capacitacion Angular</h1>
-      <nav> 
-        <ul> 
-          <li><a ng-click="redirectToHome()">Inicio</a></li>
-          <li><a ng-click="redirectToUsuario()">Usuario</a></li>
-          <li><a ng-click="redirectToContacto()">Contacto</a></li></ul> 
+      <nav>
+        <ul>
+          <li><button ng-click="redirectToHome()">Inicio</button></li>
+          <li><button ng-click="redirectToUsuario()">Usuario</button></li>
+          <li><button ng-click="redirectToContacto()">Contacto</button></li></ul> 
       </nav>
  </header>
 
- <div ui-view></div> 
-
+ <div ui-view></div>
